--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -252,7 +252,7 @@
     "\n",
     "A random measurement error can arise due to, for example, temperature fluctuations, vibrations, air currents, collisions at the molecular level, etc. This is referred to as a *technical* random error. These uncertainties cannot always be reduced. Random errors can be both positive and negative, and therefore average out if you take enough measurements. You can work with them and calculate them because they are based on a probability distribution. In the following sections, we assume that you are always dealing with a random error, i.e., an error that is not correlated with other variables and for which the probability of that error occurring is *normally (Gaussian) distributed*.\n",
     "\n",
-    "In addition to technical random errors, you may encounter fundamental errors due to physical limitations on some measurements, for example due to [thermal fluctuations](https://en.wikipedia.org/wiki/Johnson%E2%80%93Nyquist_noisehttps://en.wikipedia.org/wiki/Johnson% E2%80%93Nyquist_noise) when measuring currents. This is referred to as a *fundamental* random error. This contribution to the measurement uncertainty cannot be reduced. The contribution to the total uncertainty can be either positive or negative.\n",
+    "In addition to technical random errors, you may encounter fundamental errors due to physical limitations on some measurements, for example due to [thermal fluctuations](https://en.wikipedia.org/wiki/Johnson%E2%80%93Nyquist_noise) when measuring currents. This is referred to as a *fundamental* random error. This contribution to the measurement uncertainty cannot be reduced. The contribution to the total uncertainty can be either positive or negative.\n",
     "\n",
     "### Instrumental uncertainties\n",
     "\n",
@@ -315,7 +315,7 @@
     "```{figure} Figures/digituitle.jpg\n",
     "---\n",
     "width: 80%\n",
-    "name: fig:MO:digituitle\n",
+    "label: fig:MO:digituitle\n",
     "---\n",
     "The digital multimeter determines the “exact” value of a 33 kΩ (5% tolerance) resistor.\n",
     "```\n",
@@ -334,19 +334,19 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "Doordat meetwaarden kunnen fluctueren, geeft het gemiddelde van een serie herhaalde metingen ($x_i$) de best mogelijke benadering van de werkelijke waarde. De gemiddelde waarde bereken je op basis van de serie herhaalde metingen:\n",
+    "Because measured values can fluctuate, the average of a series of repeated measurements ($x_i$) provides the best possible approximation of the actual value. The average value is calculated based on the series of repeated measurements:\n",
     "\n",
     "$$\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i$$ (eq:gem)\n",
     "\n",
-    "Uiteraard is een herhaalde meting alleen zinnig wanneer je instrument nauwkeurig genoeg is om variaties te tonen. In de serie metingen zit een mate van spreiding: De metingen verschillen van elkaar. De standaard deviatie is een maat voor die spreiding:\n",
+    "Of course, a repeated measurement only makes sense if your instrument is accurate enough to show variations. There is a degree of dispersion in the series of measurements: the measurements differ from each other. The standard deviation is a measure of that dispersion:\n",
     "\n",
     "$$\\sigma(x) = \\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}$$ (eq:stdev)\n",
     "\n",
-    "Alhoewel het gemiddelde en de standaard deviatie beter gedefinieerd worden met meer metingen, neemt de standaard deviatie niet af in waarde, zie {numref}`Figuur {number} <fig:MO:noisegen>`. De spreiding zelf is dan ook geen goede maat voor de onzekerheid in je gemiddelde waarde. De onzekerheid in je gemiddelde wordt gegeven door:\n",
+    "Although the mean and standard deviation are better defined with more measurements, the standard deviation does not decrease in value, see {numref}`Figure {number} <fig:MO:noisegen>`. The spread itself is therefore not a good measure of the uncertainty in your mean value. The uncertainty in your mean is given by:\n",
     "\n",
-    "$$u(x) = \\frac{\\sigma(x)}{\\sqrt{N}}$$ (eq:unc)\n",
+    "$$u(x) = \\frac{\\sigma(x)} {\\sqrt{N}}$$ (eq:unc)\n",
     "\n",
-    "Een belangrijk inzicht is dat de meetonzekerheid afneemt met de wortel van het aantal metingen. Om de meetonzekerheid op basis van meerdere metingen 10x zo klein te krijgen, moet je 100x zoveel herhaalde metingen uitvoeren. Het optimum van het aantal herhaalde metingen hangt dan ook af van (1) de nauwkeurigheid die je wilt hebben, en (2) de tijd en geld die je hebt om die nauwkeurigheid te verkrijgen.\n",
+    "An important insight is that the measurement uncertainty decreases with the square root of the number of measurements. To reduce the measurement uncertainty based on multiple measurements by a factor of 10, you need to perform 100 times as many repeated measurements. The optimum number of repeated measurements therefore depends on (1) the accuracy you want to achieve, and (2) the time and money you have available to achieve that accuracy.\n",
     "\n",
     "```{figure} Figures/noise_anim.gif\n",
     "---\n",
@@ -356,10 +356,10 @@
     "Het genereren van ruis weergegeven als punten en in een histogram. Links onder de standaard deviatie (convergeert) en rechtsonder de meetonzekerheid (wordt kleiner met $\\frac{1}{\\sqrt{N}}$).\n",
     "```\n",
     "\n",
-    "De meetonzekerheid is gelijk aan de deviatie van het gemiddelde van herhaalde experimenten. Dat wil zeggen, als het volledige experiment herhaald wordt, zal er steeds een verschil zitten in het gevonden gemiddelde. De standaard deviatie daarvan is gelijk aan $u(x)$, ofwel, er is een kans van grofweg 2/3 dat bij een herhaling van het volledige experiment het gemiddelde tussen $\\overline{x} \\pm u(x)$ ligt. In onderstaande code zie je hoe je die bewering zou kunnen controleren.\n",
+    "The measurement uncertainty is equal to the deviation of the mean of repeated experiments. That is, if the entire experiment is repeated, there will always be a difference in the mean found. The standard deviation of this is equal to $u(x)$, or, there is a roughly 2/3 chance that when the entire experiment is repeated, the average will lie between $\\overline{x} \\pm u(x)$. The code below shows how you could verify this statement.\n",
     "\n",
     "```{tip}\n",
-    "Om de code hieronder te runnen en aan te passen, druk op het raketje bovenaan de pagina. Na het inladen van de benodigde packages, kun je aan de slag!\n",
+    "To run and modify the code below, press the rocket at the top of the page. After loading the necessary packages, you can get started!\n",
     "```"
    ]
   },
@@ -367,21 +367,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De uiteindelijke waarde die je gebruikt noteer je als: \n",
+    "The final value you use is written as: \n",
     "\n",
-    "$$ Meting \\pm onzekerheid + eenheid $$ \n",
+    "$$ Measurement \\pm uncertainty + unit $$ \n",
     "\n",
-    "De onzekerheid bepaalt het aantal te gebruiken significante cijfers. Je gebruikt namelijk hetzelfde aantal decimale cijfers.\n",
+    "The uncertainty determines the number of significant digits to be used. You use the same number of decimal digits.\n",
     "\n",
-    "```{admonition} Voorbeeld: Notatie \n",
+    "```{admonition} Example: Notation \n",
     ":class: dropdown, tip\n",
-    "Het gemiddelde van een herhaalde meting is 4.04 V met een onzekerheid van 0.1 V. De onzekerheid heeft 1 decimaal getal, de meting noteer je dan als: (4.0 $\\pm$ 0.1) V.\n",
+    "The average of a repeated measurement is 4.04 V with an uncertainty of 0.1 V. The uncertainty has 1 decimal place, so you record the measurement as: (4.0 $\\pm$ 0.1) V.\n",
     "```\n",
     "\n",
     "```{exercise}\n",
     ":label: ex-twee\n",
     ":class: dropdown\n",
-    "Bepaal het gemiddelde, standaardafwijking en standaardfout van de volgende meetseries:\n",
+    "Determine the mean, standard deviation and standard error of the next measurement series:\n",
     "\n",
     "   1.  0.10; 0.15; 0.18; 0.13\n",
     "\n",
@@ -400,33 +400,33 @@
     "````\n",
     "\n",
     "### Weighted average\n",
-    "Het kan voorkomen dat niet alle herhaalde metingen even betrouwbaar zijn. Als meting 1 twee keer zo kleine onzekerheid heeft als meting 2, dan lijkt het logisch dat het gemiddelde berekend wordt door $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We spreken dan over een gewogen gemiddelde. De vraag is dan natuurlijk hoe je aan de uitspraak komt over de betrouwbaarheid en hoe we daarmee aan onze weegfactor komen. Gelukkig hebben we daar net een maat voor gevonden, nl. de meetonzekerheid. De weegfactor wordt gedefinieerd door:\n",
+    "It may happen that not all repeated measurements are equally reliable. If measurement 1 has half the uncertainty of measurement 2, then it seems logical that the average is calculated by $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We then refer to this as a weighted average. The question then, of course, is how to determine the reliability and how to arrive at our weighting factor. Fortunately, we have just found a measure for this, namely the measurement uncertainty. The weighting factor is defined by:\n",
     "\n",
     "$$w_i = \\frac{1}{u(x_i)^2}$$ (eq:weegfactor)\n",
     "\n",
-    "Het gewogen gemiddelde is daarmee:\n",
+    "The weighted average becomes:\n",
     "\n",
     "$$\\overline{x} = \\frac{w_1 x_1 + w_2 x_2 + w_3 x_3 + ... + w_n x_n}{w_1 + w_2 + w_3 + ... + w_n} = \\frac{\\sum_{i=1}^{N} w_i x_i}{\\sum_{i=1}^{N} w_i}.$$ (eq:gewogengemiddelde)\n",
     "\n",
-    "met een bijbehorende onzekerheid van:\n",
+    "with an associated uncertainty of:\n",
     "\n",
     "$$u(x) = \\sqrt{\\frac{1}{\\sum_i^N{w_i}}}$$ (eq:unc_gewogengemiddelde)\n",
     "\n",
-    "Merk op dat de bovenstaande formule wordt gereduceerd tot het *normale* gemiddelde als alle weegfactoren $w_i$ gelijk zijn aan 1.\n",
+    "Note that the above formula reduces to the *normal* mean if all weighting factors $w_i$ are equal to 1.\n",
     "\n",
     "```{exercise} \n",
     ":label: ex-gem\n",
     ":class: dropdown\n",
-    "In een experiment bij het natuurkundig practicum wordt de valversnelling bepaald. Dit levert de volgende waarden op bij verschillende groepjes: 9.814 ± 0.007, 9.807 ± 0.003, 9.813 ± 0.004.\n",
+    "In an experiment during physics lab, the acceleration due to gravity is determined. This yields the following values for different groups: 9.814 ± 0.007, 9.807 ± 0.003, 9.813 ± 0.004.\n",
     "\n",
-    "Bereken het gewogen gemiddelde en de bijbehorende onzekerheid.\n",
+    "Calculate the weighted average and the corresponding uncertainty.\n",
     "```\n",
     "\n",
     "````{solution} ex-gem\n",
     ":class: dropdown\n",
     "9.809 ± 0.002 m/s²\n",
     "\n",
-    "Merk op dat de onzekerheid in het eindantwoord kleiner is geworden!\n",
+    "Note that the uncertainty in the final answer has decreased!\n",
     "````\n",
     "\n",
     "## Probability distributions\n",
@@ -443,20 +443,20 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "Zoals aangegeven zit er spreiding in herhaalde metingen. De fysische meting $M$ kunnen we zien als de optelsom van de fysische waarde $G$ en ruis $s$:\n",
+    "As indicated, there is variation in repeated measurements. We can view the physical measurement $M$ as the sum of the physical value $G$ and noise $s$:\n",
     "\n",
     "$$M = G + s$$ (eq:MGs)\n",
     "\n",
-    "Ruis is hier ruim gedefinieerd, we verstaan er hier even alle mogelijke fouten onder. Onze interesse gaat met name uit naar willekeurige fouten. Deze zijn *normaal* verdeeld.\n",
+    "Noise is broadly defined here; we understand it to mean all possible errors. We are particularly interested in random errors. These are normally distributed.\n",
     "\n",
     "### Gaussian distribution\n",
-    "Wanneer we te maken hebben met willekeurige ruis, dan kan de kans dat een waarde optreedt beschreven worden aan de hand van een normale (Gaussische) verdeling:\n",
+    "When dealing with random noise, the probability of a value occurring can be described using a normal (Gaussian) distribution:\n",
     "\n",
     "$$ P(x) = \\frac{1}{{\\sigma \\sqrt{2\\pi}}}e^{\\frac{{-(x - \\mu)^2}}{{2\\sigma^2}}} $$ (eq:Gauss)\n",
     "\n",
-    "hierin is $P(x)$ de kansdichtheidsfunctie, met $\\mu$ het gemiddelde waarde van de ruis en $\\sigma$ de standaard deviatie.\n",
+    "Here, $P(x)$ is the probability density function, with $\\mu$ being the mean value of the noise and $\\sigma$ being the standard deviation.\n",
     "\n",
-    "Een voorbeeld van een ruis signaal is weergegeven in {numref}`Figuur {number} <fig:MO:noise>` (de bijbehorende code is in een cel daaronder getoond). Het gemiddelde van deze waarden is 0. Het herhalen van metingen zorgt er dus voor dat de invloed van de ruis beperkt wordt omdat de gemiddelde bijdrage 0 is:\n",
+    "An example of a noise signal is shown in {numref}`Figure {number} <fig:MO:noise>` (the corresponding code is shown in a cell below). The mean of these values is 0. Repeating measurements therefore limits the influence of the noise because the mean contribution is 0:\n",
     "\n",
     "$$\\overline{M} = \\frac{\\sum_{i=1}^{N} (G + s)}{N} = \\frac{\\sum_{i=1}^{N} G + \\sum_{i=1}^{N} s}{N} = \\frac{\\sum_{i=1}^{N} G}{N} = \\overline{G}$$ (eq:MisG)\n",
     "\n",
@@ -467,7 +467,7 @@
     "width: 50%\n",
     "name: fig:MO:noise\n",
     "---\n",
-    "Random noise, te zien is dat grote uitschieters voorkomen, maar minder frequent.\n",
+    "Random noise, observe that outliers exist but are not frequent.\n",
     "```\n",
     "\n",
     "```{figure} Figures/noise_average.png\n",
@@ -475,7 +475,7 @@
     "width: 50%\n",
     "name: fig:MO:noise_av\n",
     "---\n",
-    "De gemiddelde waarde van ruis wordt steeds beter gedefinieerd bij herhaalde metingen.\n",
+    "The average value of noise is increasingly well defined with repeated measurements.\n",
     "\n",
     "```\n",
     "```{figure} Figures/noise_sigma.png\n",
@@ -483,10 +483,10 @@
     "width: 50%\n",
     "name: fig:MO:noise_sigm\n",
     "---\n",
-    "De standaard deviatie wordt steeds beter gedefinieerd bij herhaalde metingen.\n",
+    "The standard deviation becomes increasingly well defined with repeated measurements.\n",
     "```\n",
     "\n",
-    "We moeten hier wel voorzichtig mee zijn, in {numref}`Figuur {number} <fig:MO:repnoise>` is te zien dat een histogram van vier herhaalde metingen aan ruis steeds een net iets ander beeld geeft. Elk histogram bestaat uit een 1000 herhaalde metingen. Er is dus zelfs een onzekerheid in de onzekerheid $\\left( \\frac{1}{\\sqrt{2N-2}}\\right )$. De precieze wijze waarop we onze waarden rapporteren is uitgewerkt in {ref}`MO:std:labels`. \n",
+    "We must be careful here, as {numref}`Figure {number} <fig:MO:repnoise>` shows that a histogram of four repeated measurements of noise always gives a slightly different picture. Each histogram consists of 1000 repeated measurements. So there is even an uncertainty in the uncertainty $\\left( \\frac{1}{\\sqrt{2N-2}}\\right )$. The exact way in which we report our values is elaborated in {ref}`MO:std:labels`. \n",
     "\n",
     "\n",
     "```{figure} Figures/noise1.png\n",
@@ -494,7 +494,7 @@
     "width: 90%\n",
     "name: fig:MO:repnoise\n",
     "---\n",
-    "Zelfs 1000 herhaalde metingen (aan ruis) laten verschillen zien.\n",
+    "Even 1,000 repeated measurements (of noise) show differences.\n",
     "```\n"
    ]
   },
