--- a/book/Course files/Notebook 2/NB2_ex_sol.ipynb
+++ b/book/Course files/Notebook 2/NB2_ex_sol.ipynb
@@ -5,7 +5,7 @@
    "id": "4c026bc5",
    "metadata": {},
    "source": [
-    "## Solutions to Exercises<a class=\"anchor\" id=\"section_2_4\"></a>"
+    "# Solutions to Exercises<a class=\"anchor\" id=\"section_2_4\"></a>"
    ]
   },
   {
