--- a/book/Course files/Notebook 4/NB4_ex_sol.ipynb
+++ b/book/Course files/Notebook 4/NB4_ex_sol.ipynb
@@ -5,7 +5,7 @@
    "id": "4b75370b",
    "metadata": {},
    "source": [
-    "## Solutions to exercises<a class=\"anchor\" id=\"section_4_5\"></a>"
+    "# Solutions to exercises<a class=\"anchor\" id=\"section_4_5\"></a>"
    ]
   },
   {
