--- a/book/Course files/Notebook 5/NB5_ex_sol.ipynb
+++ b/book/Course files/Notebook 5/NB5_ex_sol.ipynb
@@ -5,7 +5,7 @@
    "id": "cb3d4121",
    "metadata": {},
    "source": [
-    "## Solutions to exercises<a class=\"anchor\" id=\"section_5_4\"></a>\n",
+    "# Solutions to exercises<a class=\"anchor\" id=\"section_5_4\"></a>\n",
     "\n"
    ]
   },
