--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -40,9 +40,9 @@
     "|0.067  |0.006    |145    | 2   |\n",
     "\n",
     "\n",
-    "The diode is expected to behave according to the following relation: $I = a(e^{bV}-1)$, where $a$ and $b$ are unknown constants . \n",
+    "The diode is expected to behave according to the following relation: $I = a(e^{bV}-1)$, where $a$ and $b$ are unknown constants. \n",
     "\n",
-    "**Exercise:** Use the curve_fit function to determine whether this is a valid model to describe the dataset. Is the found parameter $a$ in agreement with the value found in another experiment $a_{2} = 2.0 \\pm 0.5$ nA?\n",
+    "**Exercise:** Use the curve_fit function to determine whether this is a valid model to describe the dataset. Is the found parameter $a$ in agreement with the value found in another experiment $a_{2} = 2.0 \\pm 0.5 \\mathrm{nA}$?\n",
     "\n",
     "*Hint: use a logscale on the y-axis*"
    ]
@@ -136,16 +136,15 @@
     "\n",
     "## Quantities, units, dimension-analysis and constants\n",
     "\n",
-    "In physics, we measure physical quantities. We distinguish between vectors (quantities with a direction $\\vec{F}$ (N)) and scalars (quantities with only a value ($m (\\mathrm{kg})$). The quantity is written in italics ($U$), with the corresponding unit in upright type (V).\n",
+    "In physics, we measure physical quantities. We distinguish between vectors (quantities with a direction $\\vec{F}$ (N)) and scalars (quantities with only a value ($m (\\mathrm{kg})$)). The quantity is written in italics ($U$), with the corresponding unit in upright type ($\\mathrm{V}$).\n",
     "\n",
-    "There are five commonly used standard units (kg, m, s, K, C). There is also a sixth standard unit that you encounter less often (cd). All other units are derived from these standard units. The derivation of the unit is based on the formula:\n",
+    "There are five commonly used standard units ($\\mathrm{kg, m, s, K, C}$). There is also a sixth standard unit that you encounter less often ($\\mathrm{cd}$). All other units are derived from these standard units. The derivation of the unit is based on the formula:\n",
     "\n",
     "```{admonition} Example: Derivation of J/s\n",
     ":class: dropdown, tip\n",
     "$P = F\\cdot v$\\\n",
-    "[J/s] = [kg m s$^{-2}$] $\\cdot$ [m s$^{-1}$] = [kg m$^{2}$ s$^{-3}$]\n",
+    "$[$\\mathrm{J/s}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [$\\mathrm{kg m}^{2} $\\mathrm{s}^{-3}]$\n",
     "```\n",
-    "\n",
     "\n",
     "In the same way, based on units (dimensional analysis), you can derive formulas if you know which quantities may play a role. This will be discussed in much greater depth in the second-year course Physical Transport Phenomena. Would you like to know how to perform a dimensional analysis? Then take a look at this video:\n",
     "\n",
@@ -268,27 +267,29 @@
     "The four variants concerning accuracy and precision. Accuracy is strongly linked to systematic errors, precision to random errors.\n",
     "```\n",
     "\n",
-    "```{note} Meetschalen\n",
+    "```{note} Measuring scales \n",
     ":class: dropdown\n",
-    "De verschillende meetinstrumenten hebben verschillende meetschalen. We onderscheiden een nominale, een ordinale, een interval, een ratio en een kardinale schaal.\n",
     "\n",
-    "**1. Nominale schaal**\\\n",
-    "Als we alleen de kwaliteit van het object benoemen, dan heet de meetschaal nominaal. Vaststellen van de kleur van een oplossing is daarvan een voorbeeld.\n",
+    "Different measuring instruments have different measuring scales. We distinguish between nominal, ordinal, interval, ratio, and cardinal scales.\n",
     "\n",
-    "**2. Ordinale schaal**\\\n",
-    "Als de benoeming een rangordening inhoudt, spreken we van een ordinale schaal. Een voorbeeld is het geven van cijfers voor studieprestaties. Iemand met een 10 weet meer dan iemand met een 5, maar zo iemand weet niet twee keer zoveel. Ook is het verschil in kennis tussen een 5 en een 6 meestal onvergelijkbaar met het verschil tussen een 9 en een 10.\n",
+    "**1. Nominal scale**\\\n",
+    "If we only name the quality of the object, the measuring scale is called nominal. Determining the color of a solution is an example of this.\n",
     "\n",
-    "**3. Intervalschaal**\\\n",
-    "Een schaal waarop gelijke verschillen wel hetzelfde betekenen maar verhoudingen niet, heet een intervalschaal. Op een intervalschaal is het nulpunt willekeurig. De Celsiusschaal is daarvan een voorbeeld. 100 ˚C is niet een twee keer zo hoge temperatuur als 50 ˚C, maar wel is het temperatuurverschil tussen 50 ˚C en 51 ˚C hetzelfde als tussen 100 ˚C en 101 ˚C.\n",
+    "**2. Ordinal scale**\\\n",
+    "If the designation involves a ranking, we refer to an ordinal scale. An example is giving grades for academic performance. Someone with a 10 knows more than someone with a 5, but that person does not know twice as much. Also, the difference in knowledge between a 5 and a 6 is usually incomparable to the difference between a 9 and a 10.\n",
     "\n",
-    "**4. Ratioschaal**\\\n",
-    "Als we behalve met verschillen ook met verhoudingen (ratio's) van meetuitkomsten zinvol kunnen rekenen, dan vindt de meting plaats op ratioschaal. Meten van lengtes is een voorbeeld. Een tafel van 2m breed is twee keer zo breed als een tafel van 1m. We streven er naar het meten op het niveau van een ratioschaal te brengen. Een voorbeeld is het overgaan van de Celsiusschaal op de absolute temperatuurschaal (de Kelvinschaal).\n",
+    "**3. Interval scale**\\\n",
+    "A scale on which equal differences mean the same thing but ratios do not is called an interval scale. On an interval scale, the zero point is arbitrary. The Celsius scale is an example of this. 100 ˚C is not twice as high a temperature as 50 ˚C, but the temperature difference between 50 ˚C and 51 ˚C is the same as between 100 ˚C and 101 ˚C.\n",
     "\n",
-    "**5. Kardinale schaal**\\\n",
-    "Het feit dat we op een intervalschaal met vastgelegd nulpunt of op een ratioschaal kunnen meten legt de getalwaarden niet vast. Pas als we de eenheid hebben gekozen (voor Celsiustemperaturen de ˚C, voor lengtes bijvoorbeeld de meter), kunnen we getalwaarden toekennen. We spreken dan van een kardinale schaal.\n",
+    "\n",
+    "**4. Ratio scale**\\\n",
+    "If, in addition to differences, we can also use ratios of measurement results in a meaningful way, then the measurement takes place on a ratio scale. Measuring lengths is an example. A table that is 2 m wide is twice as wide as a table that is 1 m wide. We strive to bring measurement to the level of a ratio scale. An example is the transition from the Celsius scale to the absolute temperature scale (the Kelvin scale).\n",
+    "\n",
+    "**5. Cardinal scale**\\\n",
+    "The fact that we can measure on an interval scale with a fixed zero point or on a ratio scale does not determine the numerical values. Only when we have chosen the unit (for Celsius temperatures the ˚C, for lengths for example the meter) can we assign numerical values. We then speak of a cardinal scale.\n",
     "```\n",
     "\n",
-    "**Measurement uncertainty in analoge instruments**\\\n",
+    "**Measurement uncertainty in analog instruments**\\\n",
     "With analog instruments, you have to read the value, see {numref}`Figure {number} <fig:MO:aflezen>`. In some cases, there is a mirror behind the pointer so that you don't make a mistake by reading the pointer at an angle. In addition, you cannot read the value with infinite precision. Think of a measuring stick that allows you to measure accurately to the nearest millimeter, but where distances between millimeters cannot be determined accurately, especially when the lines on the ruler are thick. When reading an analog meter, you must estimate the associated uncertainty:\n",
     "* Read the value as accurately as possible. \n",
     "* Determine the values that you can still read *accurately*.\n",
