--- a/book/Course files/Notebook 1/NB1_ex_sol.ipynb
+++ b/book/Course files/Notebook 1/NB1_ex_sol.ipynb
@@ -5,7 +5,8 @@
    "id": "26b4b849",
    "metadata": {},
    "source": [
-    "## Solutions to Exercises<a class=\"anchor\" id=\"section_1_7\"></a>\n"
+    "\n",
+    "# Solutions to Exercises<a class=\"anchor\" id=\"section_1_7\"></a>\n"
    ]
   },
   {
