--- a/book/Course files/Notebook 3/NB3_ex_sol.ipynb
+++ b/book/Course files/Notebook 3/NB3_ex_sol.ipynb
@@ -5,7 +5,7 @@
    "id": "f2b7ae42",
    "metadata": {},
    "source": [
-    "## Solutions to exercises<a class=\"anchor\" id=\"section_3_4\"></a>"
+    "# Solutions to exercises<a class=\"anchor\" id=\"section_3_4\"></a>"
    ]
   },
   {
